<package>
  <name>data</name>
  <version>1.0.0</version>
  <description>  data       </description>
  <maintainer email="123@nwpu.edu.cn">ll</maintainer>
  <license>BSD</license>


<buildtool_depend>catkin</buildtool_depend>

 
 
 <build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
  
  <build_depend>std_msgs</build_depend>
 <build_depend>sensor_msgs</build_depend>


  <run_depend>sensor_msgs</run_depend>


<run_depend>std_msgs</run_depend>
 <run_depend>roscpp</run_depend>
<run_depend>message_generation</run_depend>
<run_depend>message_runtime</run_depend>

  <export>  </export>
  

</package>


